[package]
name = "qt3tests"
version = "0.1.0"
authors = ["Bart Schuller <bart.schuller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.xpath]
opt-level = 1

[dependencies]
roxmltree = "^0.11"
clap = "^2"
sxd-xpath = "^0.4"
sxd-document = "^0.3"
itertools = "^0.9"
xpath = {path="../xpath"}
smop-xmltree = {path="../smop-xmltree"}
junit-report = "^0.4"
