[package]
name = "smop-qt3tests"
version = "0.1.0"
authors = ["Bart Schuller <bart.schuller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Needed to prevent stack overflow in the parser for a particular test.
[profile.dev.package.smop-xpath]
opt-level = 1

[dependencies]
roxmltree = "0.19.0"
clap = { version = "4.5.1", features = ["cargo"] }
sxd-xpath = "^0.4"
sxd-document = "^0.3"
itertools = "0.12.1"
smop-xpath = {path="../smop-xpath"}
smop-xmltree = {path="../smop-xmltree"}
junit-report = "0.8.3"
time = "0.3.34"
