[package]
name = "xpath"
version = "0.1.0"
authors = ["Bart Schuller <bart.schuller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^5"
# nom-unicode = "^0.1"
rust_decimal = "^1.4"
roxmltree = "^0.11"
# itertools = "^0.9"

pest = "^2.1"
pest_derive = "^2.1"
pest_consume = "^1.0"
pest_ascii_tree = "^0.1"
